KB-11527 | BE| TECHDEBT| Improve the code quality for the cb-ext-profile service.
1. In the controller class replaced all generic or Object type return type to standard APIResponse, Removed all the unused exceptions.
2. Replaced all the repititive Strings with the Constants value.
3. Removed the unused methods - sortContextData, getSortingComparator and all the test cases impacted.
4. Refractored the checkConnected method.